nullaway_error_9c869d43-5491-4eda-a181-308afaa0575c.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/environment/tilemap/xml/Tileset.java:232: error: [NullAway] dereferenced expression this.allTiles is @Nullable
    TilesetEntry tile = this.allTiles.get(tileId);
                                     ^
    (see http://t.uber.com/nullaway )
